--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>The Adventures of Little Doug – Stream Explorer</title>
+    <title>The Adventures of Little Doug – Wetland Explorer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,5 +21,6 @@
 <script src="game.js"></script>
 </body>
 </html>
+
 
 
