--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id="explorer">
     <h2>Field Journal</h2>
     <img id="explorerImage" src="player.png" alt="Insect">
-    <h3 id="explorerName">Flip a rock to find an insect</h3>
-    <p id="explorerText">The information about the insect will appear here.</p>
+    <h3 id="explorerName">Flip a rock, roll a log and check out a lilypad to find an whats hiding</h3>
+    <p id="explorerText">The information about what you find will appear here.</p>
 </div>
 
 
@@ -21,6 +21,7 @@
 <script src="game.js"></script>
 </body>
 </html>
+
 
 
 
